compiler/tests/errortests/method-arg-mut.txt
FILENAME:17:20: error: Mutability mismatch for argument target in method 'moveTo': expected 'mutable', but got 'immutable'.
    source.moveTo(&target);
                   ^-----
